--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <title>Wip Italia</title>
 </head>
 <body>
+  <a href="javascript:void(0)" id="hamburger">
+    <img src="img/hamburger.svg" alt="menu">
+  </a>
   <ul id="card-trigger">
     <li><a href="javascript:void(0)" data-sku="7">post 7</a></li>
     <li><a href="javascript:void(0)" data-sku="3">post 3</a></li>
@@ -14,6 +17,8 @@
   
   <a href="javascript:void(0)" id="remover">remove cards</a>
   
-  <div id="cards-holder"></div>
+  <h2>Carte selezionate</h2> 
+  <div id="cards-holder">
+  </div>
 </body>
 </html>
